CMAKE_MINIMUM_REQUIRED (VERSION 2.8.0)

PROJECT( grant )

SET( APP_NAME spc )
SET( SOURCE_DIR ${PROJECT_SOURCE_DIR}/src )
SET( DESIGN_DIR ${SOURCE_DIR}/designer )
SET( TARGET ${SOURCE_DIR}/${APP_NAME}.py )

#MESSAGE(${DESIGN_DIR})
ADD_SUBDIRECTORY (${SOURCE_DIR})
#file( GLOB_RECURSE UI_FILES ${DESIGN_DIR}/*.ui )
#MESSAGE(${UI_FILES})
